fix: Add publish validation and consolidate rust toolchain
- Enable verify-publish and deprecation-check via pipeline-rust inputs
- Pin rust-toolchain.toml to 1.93.0 at workspace root (single source of truth)
- Remove 6 sub-crate rust-toolchain.toml files to eliminate drift
- Fix deprecation warnings in didcomm JWE/JWS code (inline format args)
- Ignore network-dependent tests in did-scid

The verify-publish job catches toolchain mismatches, dependency conflicts,
and version issues before merge. Deprecation warnings are reported as PR
comments (non-blocking).

--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,2 +1,4 @@
 [toolchain]
-channel = "stable"
+channel = "1.93.0"
+# Pin to specific version to prevent drift between local dev and CI
+# Must be >= rust-version in Cargo.toml (currently 1.90.0)
