--- a/crates/affinidi-messaging/affinidi-messaging-helpers/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-helpers/Cargo.toml
@@ -24,6 +24,10 @@ path = "src/mediator_administration/main.rs"
 name = "generate_mediator_config"
 path = "src/generate_mediator_config/main.rs"
 
+[[bin]]
+name = "generate_webvh_did"
+path = "src/generate_webvh_did/main.rs"
+
 [dependencies]
 # Affinidi Crates
 affinidi-did-resolver-cache-sdk = { workspace = true, features = [
@@ -33,6 +37,7 @@ affinidi-did-common.workspace = true
 affinidi-messaging-didcomm.workspace = true
 affinidi-messaging-sdk.workspace = true
 affinidi-tdk.workspace = true
+didwebvh-rs = "0.1.16"
 
 ahash = { version = "0.8", features = ["serde"] }
 base64 = "0.22"
@@ -59,6 +64,7 @@ tracing-subscriber = { version = "0.3", features = [
   "json",
   "valuable",
 ] }
+url = "2.5"
 uuid = { version = "1.20", features = ["v4", "fast-rng"] }
 
 [dev-dependencies]
