--- a/crates/affinidi-tdk/common/affinidi-secrets-resolver/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-secrets-resolver/Cargo.toml
@@ -20,8 +20,8 @@ p384 = ["affinidi-crypto/p384"]
 ed25519 = ["affinidi-crypto/ed25519"]
 
 [dependencies]
-affinidi-crypto.workspace = true
-affinidi-encoding.workspace = true
+affinidi-crypto = "0.1"
+affinidi-encoding = "0.1"
 ahash = "0.8"
 base58 = "0.2"
 base64 = "0.22"
