--- a/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-example/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-example/Cargo.toml
@@ -16,7 +16,7 @@ rust-version.workspace = true
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-affinidi-did-common.workspace = true
+affinidi-did-common = "0.3"
 ahash = "0.8"
 serde_json = "1.0"
 thiserror = "2.0"
