--- a/crates/affinidi-messaging/affinidi-messaging-mediator/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-mediator/Cargo.toml
@@ -18,13 +18,13 @@ path = "src/main.rs"
 
 [dependencies]
 # Affinidi Crates
-affinidi-messaging-sdk.workspace = true
-affinidi-messaging-didcomm.workspace = true
-affinidi-messaging-mediator-processors.workspace = true
-affinidi-messaging-mediator-common.workspace = true
-affinidi-did-resolver-cache-sdk.workspace = true
-affinidi-did-common.workspace = true
-affinidi-secrets-resolver.workspace = true
+affinidi-messaging-sdk = "0.14"
+affinidi-messaging-didcomm = "0.11"
+affinidi-messaging-mediator-processors = "0.11"
+affinidi-messaging-mediator-common = "0.11"
+affinidi-did-resolver-cache-sdk = "0.7"
+affinidi-did-common = "0.3"
+affinidi-secrets-resolver = "0.5"
 
 # External Crates
 ahash = { version = "0.8", features = ["serde"] }
