--- a/crates/affinidi-messaging/affinidi-messaging-mediator/affinidi-messaging-mediator-processors/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-mediator/affinidi-messaging-mediator-processors/Cargo.toml
@@ -20,7 +20,7 @@ name = "message_expiry_cleanup"
 path = "src/message_expiry_cleanup/main.rs"
 
 [dependencies]
-affinidi-messaging-mediator-common.workspace = true
+affinidi-messaging-mediator-common = "0.11"
 clap = { version = "4.5", features = ["derive"] }
 deadpool-redis = { version = "0.22", features = ["rt_tokio_1"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
