--- a/crates/affinidi-messaging/affinidi-messaging-sdk/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-sdk/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "affinidi-messaging-sdk"
-version = "0.14.3"
+version = "0.14.4"
 description = "Affinidi Messaging SDK"
 edition.workspace = true
 authors.workspace = true
@@ -14,10 +14,10 @@ repository.workspace = true
 
 [dependencies]
 # Affinidi Crates
-affinidi-tdk-common.workspace = true
-affinidi-messaging-didcomm.workspace = true
-affinidi-did-authentication.workspace = true
-affinidi-did-common.workspace = true
+affinidi-tdk-common = "0.3"
+affinidi-messaging-didcomm = "0.11"
+affinidi-did-authentication = "0.2"
+affinidi-did-common = "0.3"
 
 # External Crates
 ahash = { version = "0.8", features = ["serde"] }
