--- a/crates/affinidi-messaging/affinidi-messaging-text-client/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-text-client/Cargo.toml
@@ -14,10 +14,10 @@ repository.workspace = true
 
 [dependencies]
 # Affinidi Crates
-affinidi-tdk.workspace = true
-affinidi-messaging-sdk.workspace = true
-affinidi-messaging-didcomm.workspace = true
-affinidi-did-resolver-cache-sdk.workspace = true
+affinidi-tdk = "0.4"
+affinidi-messaging-sdk = "0.14"
+affinidi-messaging-didcomm = "0.11"
+affinidi-did-resolver-cache-sdk = "0.7"
 
 # External Crates
 ahash = { version = "0.8", features = ["serde"] }
