--- a/crates/affinidi-tdk/common/affinidi-did-authentication/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-did-authentication/Cargo.toml
@@ -13,10 +13,10 @@ publish.workspace = true
 rust-version.workspace = true
 
 [dependencies]
-affinidi-messaging-didcomm.workspace = true
-affinidi-did-resolver-cache-sdk.workspace = true
-affinidi-did-common.workspace = true
-affinidi-secrets-resolver.workspace = true
+affinidi-messaging-didcomm = "0.11"
+affinidi-did-resolver-cache-sdk = "0.7"
+affinidi-did-common = "0.3"
+affinidi-secrets-resolver = "0.5"
 
 base64 = "0.22"
 chrono = "0.4"
