--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
   "crates/affinidi-did-resolver/affinidi-did-resolver-cache-server",
   "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-example",
   "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-scid",
+  "crates/affinidi-did-resolver/affinidi-did-resolver-traits",
 
   "crates/affinidi-tdk/common/affinidi-encoding",
   "crates/affinidi-tdk/common/affinidi-crypto",
