--- a/crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "affinidi-did-resolver-cache-sdk"
-version = "0.7.3"
+version = "0.8.0"
 description = "Affinidi DID Resolver SDK"
 edition.workspace = true
 authors.workspace = true
@@ -37,6 +37,7 @@ did-scid = ["dep:did-scid"]
 [dependencies]
 # Affinidi Crates
 affinidi-did-common = "0.3"
+affinidi-did-resolver-traits = { version = "0.1", path = "../affinidi-did-resolver-traits" }
 did-example = { version = "0.5", optional = true }
 did-scid = { version = "0.1", optional = true }
 
