chore: add path deps for all workspace-internal dependencies
Enables cargo check/clippy/test to resolve workspace siblings locally.
Required because bumped versions are not yet on crates.io.
cargo package (verify-publish) will still fail until earlier waves publish.

--- a/crates/affinidi-did-resolver/affinidi-did-common/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-common/Cargo.toml
@@ -20,8 +20,8 @@ p384 = ["affinidi-crypto/p384"]
 k256 = ["affinidi-crypto/k256"]
 
 [dependencies]
-affinidi-crypto = "0.1"
-affinidi-encoding = "0.1"
+affinidi-crypto = { version = "0.1", path = "../../affinidi-tdk/common/affinidi-crypto" }
+affinidi-encoding = { version = "0.1", path = "../../affinidi-tdk/common/affinidi-encoding" }
 
 # External Crates
 base64 = "0.22"
