--- a/crates/affinidi-messaging/affinidi-messaging-helpers/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-helpers/Cargo.toml
@@ -28,11 +28,11 @@ path = "src/generate_mediator_config/main.rs"
 # Affinidi Crates
 affinidi-did-resolver-cache-sdk = { version = "0.8", features = [
   "did_example",
-] }
-affinidi-did-common = "0.3"
-affinidi-messaging-didcomm = "0.12"
-affinidi-messaging-sdk = "0.15"
-affinidi-tdk = "0.5"
+], path = "../../affinidi-did-resolver/affinidi-did-resolver-cache-sdk" }
+affinidi-did-common = { version = "0.3", path = "../../affinidi-did-resolver/affinidi-did-common" }
+affinidi-messaging-didcomm = { version = "0.12", path = "../affinidi-messaging-didcomm" }
+affinidi-messaging-sdk = { version = "0.15", path = "../affinidi-messaging-sdk" }
+affinidi-tdk = { version = "0.5", path = "../../affinidi-tdk/affinidi-tdk" }
 
 ahash = { version = "0.8", features = ["serde"] }
 base64 = "0.22"
