--- a/crates/affinidi-messaging/affinidi-messaging-text-client/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-text-client/Cargo.toml
@@ -14,10 +14,10 @@ repository.workspace = true
 
 [dependencies]
 # Affinidi Crates
-affinidi-tdk = "0.5"
-affinidi-messaging-sdk = "0.15"
-affinidi-messaging-didcomm = "0.12"
-affinidi-did-resolver-cache-sdk = "0.8"
+affinidi-tdk = { version = "0.5", path = "../../affinidi-tdk/affinidi-tdk" }
+affinidi-messaging-sdk = { version = "0.15", path = "../affinidi-messaging-sdk" }
+affinidi-messaging-didcomm = { version = "0.12", path = "../affinidi-messaging-didcomm" }
+affinidi-did-resolver-cache-sdk = { version = "0.8", path = "../../affinidi-did-resolver/affinidi-did-resolver-cache-sdk" }
 
 # External Crates
 ahash = { version = "0.8", features = ["serde"] }
