--- a/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-scid/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-scid/Cargo.toml
@@ -23,7 +23,7 @@ did-webvh = ["dep:didwebvh-rs"]
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-affinidi-did-common = "0.3"
+affinidi-did-common = { version = "0.3", path = "../../affinidi-did-common" }
 
 didwebvh-rs = { version = "0.1", optional = true }
 did-resolver-cheqd = { version = "1.0.1", optional = true }
