--- a/crates/affinidi-tdk/common/affinidi-crypto/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-crypto/Cargo.toml
@@ -20,7 +20,7 @@ p384 = ["dep:p384"]
 ed25519 = ["dep:ed25519-dalek"]
 
 [dependencies]
-affinidi-encoding = "0.1"
+affinidi-encoding = { version = "0.1", path = "../affinidi-encoding" }
 
 base58 = "0.2"
 base64 = "0.22"
