feat: add affinidi-rdf-encoding crate for RDFC-1.0 and JSON-LD support
Add a new minimal-dependency crate providing RDF Dataset Canonicalization
(RDFC-1.0) and JSON-LD expansion for W3C Verifiable Credentials.

Includes:
- RDF data model types (NamedNode, BlankNode, Literal, Quad, Dataset)
- N-Quads parser/serializer with W3C-compliant escaping
- Full RDFC-1.0 canonicalization algorithm with DoS protection
- JSON-LD expansion and to-RDF conversion for VC/DID contexts
- Bundled W3C context documents (credentials/v2, examples/v2, data-integrity/v2)
- W3C vc-di-eddsa B.1 test vectors with exact hash verification
- Criterion benchmarks

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ members = [
 
   "crates/affinidi-tdk/common/affinidi-tdk-common",
   "crates/affinidi-tdk/common/affinidi-data-integrity",
+  "crates/affinidi-tdk/common/affinidi-rdf-encoding",
   "crates/affinidi-tdk/common/affinidi-did-authentication",
 
   "crates/affinidi-messaging/affinidi-messaging-sdk",
