feat: add eddsa-rdfc-2022 cryptosuite support to affinidi-data-integrity
Add support for the W3C eddsa-rdfc-2022 Data Integrity cryptosuite alongside
the existing eddsa-jcs-2022 suite. Both use Ed25519 signing but differ in
the transformation step: JCS uses JSON Canonicalization, while RDFC uses
JSON-LD expansion and RDF Dataset Canonicalization (RDFC-1.0).

- Add EddsaRdfc2022 variant to CryptoSuite enum with serde support
- Add sign_rdfc_data() method for RDFC signing of JSON-LD documents
- Refactor verification to auto-dispatch based on proof.cryptosuite
- Replace ambiguous TryFrom<KeyType> with validate_key_type() helper
- Add integration tests with W3C vc-di-eddsa B.1 test vectors
- Add cross-suite rejection tests (JCS proof fails RDFC verify and vice versa)

--- a/crates/affinidi-tdk/common/affinidi-data-integrity/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-data-integrity/Cargo.toml
@@ -14,6 +14,7 @@ rust-version.workspace = true
 
 [dependencies]
 affinidi-crypto = "0.1"
+affinidi-rdf-encoding = { version = "0.1", path = "../affinidi-rdf-encoding" }
 affinidi-secrets-resolver = "0.5"
 affinidi-did-common = "0.3"
 
