perf: add JCS vs RDFC proof signing and verification benchmarks
Add criterion benchmarks comparing eddsa-jcs-2022 and eddsa-rdfc-2022
performance for both signing and verification using the W3C B.1 Alumni
Credential. Includes individual benchmarks and side-by-side comparison
groups for easy performance analysis.

--- a/crates/affinidi-tdk/common/affinidi-data-integrity/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-data-integrity/Cargo.toml
@@ -30,6 +30,7 @@ tracing = "0.1"
 
 [dev-dependencies]
 clap = { version = "4.5", features = ["derive"] }
+criterion = { version = "0.8", features = ["html_reports"] }
 tokio = { version = "1.49" }
 tracing-subscriber = { version = "0.3", features = [
   "env-filter",
@@ -37,3 +38,7 @@ tracing-subscriber = { version = "0.3", features = [
   "json",
   "valuable",
 ] }
+
+[[bench]]
+name = "proof_benchmarks"
+harness = false
