--- a/crates/affinidi-tdk/common/affinidi-data-integrity/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-data-integrity/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "affinidi-data-integrity"
 description = "W3C Data Integrity Implementation"
-version = "0.3.6"
+version = "0.4.0"
 edition.workspace = true
 authors.workspace = true
 readme = "README.md"
@@ -14,6 +14,7 @@ rust-version.workspace = true
 
 [dependencies]
 affinidi-crypto = "0.1"
+affinidi-rdf-encoding = { version = "0.1", path = "../affinidi-rdf-encoding" }
 affinidi-secrets-resolver = "0.5"
 affinidi-did-common = "0.3"
 
@@ -29,6 +30,7 @@ tracing = "0.1"
 
 [dev-dependencies]
 clap = { version = "4.5", features = ["derive"] }
+criterion = { version = "0.8", features = ["html_reports"] }
 tokio = { version = "1.49" }
 tracing-subscriber = { version = "0.3", features = [
   "env-filter",
@@ -36,3 +38,7 @@ tracing-subscriber = { version = "0.3", features = [
   "json",
   "valuable",
 ] }
+
+[[bench]]
+name = "proof_benchmarks"
+harness = false
