chore: bump dependents of affinidi-data-integrity to v0.4
Update affinidi-tdk-common (0.4.0 → 0.4.1) and affinidi-tdk (0.5.0 →
0.5.1) to use affinidi-data-integrity 0.4, which adds eddsa-rdfc-2022
cryptosuite support. Add data-integrity feature to TDK README and
patch workspace root for local dev until tdk-common 0.4.1 is published.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,3 +53,8 @@ lto = true
 
 [workspace.lints.clippy]
 uninlined_format_args = "warn"
+
+# Patch crates.io with local paths for workspace members that have been bumped
+# but not yet published. Remove entries after publishing to crates.io.
+[patch.crates-io]
+affinidi-tdk-common = { path = "crates/affinidi-tdk/common/affinidi-tdk-common" }
